--- a/esp4a/package.json
+++ b/esp4a/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "angularfire2": "^5.0.2",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "firebase": "^5.5.2",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
@@ -49,5 +51,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 6.2.3.",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
